<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_marginBottom="140dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="marquee"
                        android:fontFamily="@font/biryani"
                        android:gravity="center_horizontal"
                        android:paddingLeft="@dimen/spacing_18"
                        android:paddingRight="@dimen/spacing_18"
                        android:singleLine="false"
                        android:text="@string/payment_terms_refund_policy"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/payment_terms"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="16dp"/>

                        <TextView
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:text="@string/payment_terms_desc"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/refund_policy"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:text="@string/refund_policy_desc"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:text="@string/payment_note"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_bggg"
                    android:id="@+id/btnPayNow"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pay_now"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/biryani"
                    android:layout_marginStart="@dimen/spacing_18"
                    android:layout_marginEnd="@dimen/spacing_18"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:gravity="center_vertical"
                        android:fontFamily="@font/biryani"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/spacing_18"
                        android:text="@string/already_paid"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/tvGoToActivate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/tap_here_to_activate"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"/>
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
