<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_marginBottom="80dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/world_map"
                        app:tint="@color/overlay_light_30" />

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="marquee"
                        android:fontFamily="@font/biryani"
                        android:gravity="center_horizontal"
                        android:paddingLeft="@dimen/spacing_18"
                        android:paddingRight="@dimen/spacing_18"
                        android:singleLine="false"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/app_name"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="10dp"
                        android:ellipsize="marquee"
                        android:fontFamily="@font/biryani"
                        android:gravity="center_horizontal"
                        android:paddingLeft="@dimen/spacing_18"
                        android:paddingRight="@dimen/spacing_18"
                        android:singleLine="false"
                        android:text="1.0.0"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

                <androidx.core.widget.NestedScrollView
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/help_feedback"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/margin_bottom"
                            android:textStyle="bold"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="16dp"/>

                        <TextView
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:text="@string/help_description"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <Button
                            android:background="@drawable/rounded_button"
                            android:textAllCaps="false"
                            android:fontFamily="@font/biryani"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:layout_marginStart="@dimen/spacing_18"
                            android:layout_marginEnd="@dimen/spacing_18"
                            android:id="@+id/contact_us_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_us"  />

                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/margin_bottom"
                            android:textStyle="bold" />


                        <TextView
                            android:fontFamily="@font/biryani"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="@dimen/spacing_18"
                            android:paddingRight="@dimen/spacing_18"
                            android:text="@string/feedback_description"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <EditText
                            android:ems="10"
                            android:layout_marginStart="@dimen/spacing_18"
                            android:layout_marginEnd="@dimen/spacing_18"
                            android:id="@+id/feedback_input"
                            android:inputType="textImeMultiLine|textMultiLine"
                            android:imeOptions="actionDone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/type_your_feedback_here"
                            android:layout_marginTop="8dp" />

                        <Button
                            android:background="@drawable/rounded_button"
                            android:textAllCaps="false"
                            android:fontFamily="@font/biryani"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:layout_marginStart="@dimen/spacing_18"
                            android:layout_marginEnd="@dimen/spacing_18"
                            android:id="@+id/submit_feedback_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/submit_feedback"
                            android:layout_marginTop="16dp" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
